# project-management-system

./: Makefile  pyproject.toml  requirements.txt
core/: urls.py  views.py
core/templates/core/: base.html  dashboard.html  index.html
manager/: settings.py
projects/: admin.py  forms.py  models.py  urls.py  views.py
projects/migrations/: 0004_remove_project_complete_per_task_comment_and_more.py
projects/templates/projects/: approved_tasks.html  my_tasks.html  new_project.html  new_task.html  project_details.html  projects.html
register/: forms.py  views.py
register/migrations/: 0012_alter_userprofile_friends.py  0013_alter_company_id_alter_invite_id_and_more.py
register/templates/register/: users.html
