[tool.poetry]
name = "project-management-system"
version = "0.1.0"
description = ""
authors = ["EvansRobbie <evansrobbie5311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
boto3="1.6.23"
botocore="1.9.23"
dj-database-url="0.5.0"
dj-static="0.0.6"
Django="4.2.2"
django-appconf="1.0.2"
django-staticfiles="1.2.1"
django-storages="1.6.6"
docutils="0.14"
gunicorn="19.7.1"
jmespath="0.9.3"
Pillow="8.2.0"
psycopg2-binary="2.8.6"
python-dateutil="2.6.1"
pytz="2018.3"
s3transfer="0.1.13"
six="1.11.0"
static3="0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
